--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 *{
-    background: var(--back);
+    /* background: var(--back); */
     font-family: sans-serif;
     margin: 0;
     padding: 0;
@@ -49,6 +49,7 @@
         background: none;
 
       }
+
 h1{
     border-radius: 20px;
     margin-bottom: 20px;
@@ -68,7 +69,8 @@ body{
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background: #b5b5b5;
+    background-color: #5b6467;
+background-image: linear-gradient(315deg, #5b6467 0%, #d3d3d3 74%);
 
 }
 .main{
